Add batch lookups and pagination across services
This commit introduces batch user/profile fetching across assignment, course, club, and event services to reduce per-item service calls, adds paged list endpoints for clubs, courses, and events, and adds internal endpoints for active course lookup. It also adds local dev-seed SQL scripts and cleanup scripts for the application databases.